Updated UrlService interface and UrlServiceImpl class, deleted application.properties from test